recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:7: error: not enough arguments for method occurences: (l: List[Int], v: Int)Int.
Unspecified value parameter v.
		return 1 + occurences(l.tail);
                                     ^occurences:9: error: not enough arguments for method occurences: (l: List[Int], v: Int)Int.
Unspecified value parameter v.
	return occurences(l.tail);
                         ^